GNOME Bugzilla – Bug 754556
libcheese: Fix warning on exit
Last modified: 2015-09-04 08:58:15 UTC
.
Created attachment 310641 [details] [review] libcheese: Fix warning on exit #0 0x00007ffff0ea4623 in _g_log_abort (breakpoint=1) at gmessages.c:324 #1 g_logv (log_domain=0x7ffff11c9224 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffffffd448) at gmessages.c:1081 #2 0x00007ffff0ea4782 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at gmessages.c:1119 #3 0x00007ffff7bd2380 in cheese_camera_finalize (object=0x14022d0) at libcheese/cheese-camera.c:1274
Review of attachment 310641 [details] [review]: Sure, please push.
Created attachment 310644 [details] [review] libcheese: Fix a run-time warning #0 0x00007ffff0ea4623 in _g_log_abort (breakpoint=1) at gmessages.c:324 #1 g_logv (log_domain=0x7ffff11c9224 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffffffc738) at gmessages.c:1081 #2 0x00007ffff0ea4782 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at gmessages.c:1119 #3 0x00007ffff7bd1cac in cheese_camera_set_property (object=0x1772ee0, prop_id=2, value=0x7fffffffc890, pspec=0x1782ae0) at libcheese/cheese-camera.c:1332
Review of attachment 310644 [details] [review]: Please push.
Attachment 310641 [details] pushed as 12bce8b - libcheese: Fix warning on exit Attachment 310644 [details] pushed as fed3d1b - libcheese: Fix a run-time warning