libcheese: Fix warning on exit

#0  0x00007ffff0ea4623 in _g_log_abort (breakpoint=1) at gmessages.c:324
 #1  g_logv (log_domain=0x7ffff11c9224 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffffffd448) at gmessages.c:1081
 #2  0x00007ffff0ea4782 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at gmessages.c:1119
 #3  0x00007ffff7bd2380 in cheese_camera_finalize (object=0x14022d0) at libcheese/cheese-camera.c:1274

https://bugzilla.gnome.org/show_bug.cgi?id=754556